[package]
name = "quic-example-server"
version = "0.1.0"
authors = ["Ryosuke Hayashi <hayashi@hayashikun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-files = "0.5"
tera = "1"
